# NeuroSC

./: .gitignore  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
examples/: 00_simple_workflow.py  01_quick_start.py  02_finetuning.py  03_cell_type_annotation.py  04_scanpy_integration.py  05_batch_integration.py  06_upload_model.py  README.md
neurosc/: __init__.py  annotate.py
neurosc/inference/: __init__.py  interpret.py  predict.py
neurosc/tl/: __init__.py  annotation.py  clustering.py  embedding.py  integration.py  pseudotime.py
neurosc/tools/: __init__.py  download.py  huggingface.py  workflows.py
neurosc/training/: __init__.py  callbacks.py  finetune.py  trainer.py
neurosc/utils/: __init__.py  metrics.py  visualization.py
