[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "neurosc"
version = "0.1.0"
description = "Neuroscience Single-Cell Foundation Models - Finetune and deploy foundation models for scRNA-seq"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "NeuroSC Contributors"}
]
keywords = [
    "single-cell",
    "neuroscience",
    "foundation-models",
    "scRNA-seq",
    "deep-learning",
    "transformers",
    "scGPT"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scanpy>=1.9.0",
    "anndata>=0.8.0",
    "torch>=2.0.0",
    "huggingface-hub>=0.16.0",
    "transformers>=4.30.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tqdm>=4.62.0",
    "scikit-learn>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "sphinx>=4.5.0",
]
full = [
    "jupyter>=1.0.0",
    "ipywidgets>=7.6.0",
    "notebook>=6.4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/NeuroSC"
Documentation = "https://neurosc.readthedocs.io"
Repository = "https://github.com/yourusername/NeuroSC"
"Bug Tracker" = "https://github.com/yourusername/NeuroSC/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

